src/test/deca/syntax/valid/custom/object/println_cast_braces.deca
// Description:
//   Print condition with int cast.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   println((int) (4));
}
