src/test/deca/syntax/invalid/custom/object/printx_cast_braces.deca
// Description:
//   Print condition with int cast.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   printx((int) 4);
}
